==> eagletrt/hv-bms-mainboard-sw/hv-bms-mainboard-bootloader-sw/Core/Src/openblt/mbrtu.c <==
#include "boot.h"                                /* bootloader generic header          */
#include "stm32f4xx.h"                           /* STM32 CPU and HAL header           */
#include "stm32f4xx_ll_usart.h"                  /* STM32 LL USART header              */
#define MBRTU_BYTE_TX_TIMEOUT_MS          (10u)
#define USART_CHANNEL   USART1
#define USART_CHANNEL   USART2
#define USART_CHANNEL   USART3
#define USART_CHANNEL   UART4
#define USART_CHANNEL   UART5
#define USART_CHANNEL   USART6
#define USART_CHANNEL   UART7
#define USART_CHANNEL   UART8

void MbRtuInit(void)
{
  blt_int16u startTimeTicks;
  blt_int16u deltaTimeTicks;
  blt_int16u currentTimeTicks;
  blt_int8u  rxDummy;

  LL_USART_InitTypeDef USART_InitStruct = {0};

  /* the current implementation supports USART1 - UART8. throw an assertion error in
   * case a different UART channel is configured.
   */
  ASSERT_CT((BOOT_COM_MBRTU_CHANNEL_INDEX == 0) ||
            (BOOT_COM_MBRTU_CHANNEL_INDEX == 1) ||
            (BOOT_COM_MBRTU_CHANNEL_INDEX == 2) ||
            (BOOT_COM_MBRTU_CHANNEL_INDEX == 3) ||
            (BOOT_COM_MBRTU_CHANNEL_INDEX == 4) ||
            (BOOT_COM_MBRTU_CHANNEL_INDEX == 5) ||
            (BOOT_COM_MBRTU_CHANNEL_INDEX == 6) ||
            (BOOT_COM_MBRTU_CHANNEL_INDEX == 7));

  /* calculate the 3.5 character delay time in free running counter ticks. note that
   * the free running counter runs at 100 kHz, so one tick is 10 us. For baudrates >
   * 19200 bps, it can be fixed to 1750 us.
   */
  if (BOOT_COM_MBRTU_BAUDRATE > 19200)
  {
    /* set T3_5 time to a fixed value of 1750 us. */
    mbRtuT3_5Ticks = 175;
  }
  /* calculate the T3_5 time, because the baudrate is <= 19200 bps. */
  else
  {
    /* T3_5 [us * 10] = 3.5 * Tchar = 3.5 * 11 * 100000 / baudrate = 3850000 / baudrate.
     * make sure to do integer round up though. Make sure to add 1 to adjust for 10us
     * timer resolution inaccuracy.
     */
    mbRtuT3_5Ticks = (blt_int16u)(((3850000UL + (BOOT_COM_MBRTU_BAUDRATE - 1U)) /
                                    BOOT_COM_MBRTU_BAUDRATE) + 1);
  }

  /* disable the UART peripheral */
  LL_USART_Disable(USART_CHANNEL);
  /* configure UART peripheral */
  USART_InitStruct.BaudRate = BOOT_COM_MBRTU_BAUDRATE;
  #if (BOOT_COM_MBRTU_STOPBITS == 1)
  USART_InitStruct.StopBits = LL_USART_STOPBITS_1;
  #else
  USART_InitStruct.StopBits = LL_USART_STOPBITS_2;
  #endif
  #if (BOOT_COM_MBRTU_PARITY == 0)
  USART_InitStruct.Parity = LL_USART_PARITY_NONE;
  USART_InitStruct.DataWidth = LL_USART_DATAWIDTH_8B;
  #elif (BOOT_COM_MBRTU_PARITY == 1)
  USART_InitStruct.Parity = LL_USART_PARITY_ODD;
  USART_InitStruct.DataWidth = LL_USART_DATAWIDTH_9B;
  #else
  USART_InitStruct.Parity = LL_USART_PARITY_EVEN;
  USART_InitStruct.DataWidth = LL_USART_DATAWIDTH_9B;
  #endif
  USART_InitStruct.TransferDirection = LL_USART_DIRECTION_TX_RX;
  USART_InitStruct.HardwareFlowControl = LL_USART_HWCONTROL_NONE;
  USART_InitStruct.OverSampling = LL_USART_OVERSAMPLING_16;
  /* initialize the UART peripheral */
  LL_USART_Init(USART_CHANNEL, &USART_InitStruct);
  LL_USART_Enable(USART_CHANNEL);
  /* enable the receiver output to be able to receive. */
  MbRtuDriverOutputControlHook(BLT_FALSE);

  /* wait for idle line detection. This is T3_5 time after reception of the last byte. */
  startTimeTicks = MbRtuFreeRunningCounterGet();
  do
  {
    /* service the watchdog. */
    CopService();
    /* get the current value of the free running counter. */
    currentTimeTicks = MbRtuFreeRunningCounterGet();
    /* check if a byte was received while waiting for the idle line. */
    if (MbRtuReceiveByte(&rxDummy) == BLT_TRUE)
    {
      /* restart the idle line detection. */
      startTimeTicks = currentTimeTicks;
    }
    /* calculate the number of ticks that elapsed since the start or since the last
     * byte reception. Note that this calculation works, even if the free running counter
     * overflowed.
     */
    deltaTimeTicks = currentTimeTicks - startTimeTicks;
  }
  while (deltaTimeTicks < mbRtuT3_5Ticks);
}

static blt_bool MbRtuReceiveByte(blt_int8u *data)
{
  blt_bool result = BLT_FALSE;

  /* check if a new byte was received on the configured channel */
  if (LL_USART_IsActiveFlag_RXNE(USART_CHANNEL) != 0)
  {
    /* update the result */
    result = BLT_TRUE;
    /* check for a frame error. the frame error check is important because it can detect
     * a missing stopbit. on an RS485 bus without bias resistors, the A-B differential
     * voltage is 0. for an RS485 transceiver this is neither a 0 nor a 1 bit, so
     * undefined. most RS485 transceivers feature a reception failsafe function to drive
     * the Rx output (going to the UART Rx) to a defined state of logic 1. in case the
     * used RS485 transceiver doesn't have such a feature, it typically leaves the Rx
     * output in a logic 0 state. this means that after the stop bit of the last packet
     * byte, the UART Rx input sees a logic 0, and assumes it is a start bit. the
     * remaining data bits will always be 0 and, most importantly no stop bit is
     * present, causing a framing error. Long story short: if you don't check for the
     * framing error flag, you might receive an extra byte with value 0, which is not
     * actually transmitted on the RS485 bus. you can catch and ignore this byte by doing
     * a frame error check.
     */
    if (LL_USART_IsActiveFlag_FE(USART_CHANNEL) != 0)
    {
      /* ignore the byte because of a detected frame error. Note that the frame error
       * flag auto-resets after reading the UART data register, which is done later on in
       * this function.
       */
      result = BLT_FALSE;
    }
    #if (BOOT_COM_MBRTU_PARITY > 0)
    /* check for a parity error. */
    if (LL_USART_IsActiveFlag_PE(USART_CHANNEL) != 0)
    {
      /* ignore the byte because of a detected parity error. Note that the parity error
       * flag auto-resets after reading the UART data register, which is done later on in
       * this function.
       */
      result = BLT_FALSE;
    }
    #endif
    /* retrieve and store the newly received byte */
    *data = LL_USART_ReceiveData8(USART_CHANNEL);
  }
  /* give the result back to the caller */
  return result;
}

static void MbRtuTransmitByte(blt_int8u data, blt_bool end_of_packet)
{
  blt_int32u timeout;

  /* write byte to transmit holding register */
  LL_USART_TransmitData8(USART_CHANNEL, data);
  /* set timeout time to wait for transmit completion. */
  timeout = TimerGet() + MBRTU_BYTE_TX_TIMEOUT_MS;

  /* not the last byte of the packet? */
  if (end_of_packet == BLT_FALSE)
  {
    /* wait for tx holding register to be empty */
    while (LL_USART_IsActiveFlag_TXE(USART_CHANNEL) == 0)
    {
      /* keep the watchdog happy */
      CopService();
      /* break loop upon timeout. this would indicate a hardware failure. */
      if (TimerGet() > timeout)
      {
        break;
      }
    }
  }
  /* this is the last byte of a packet. */
  else
  {
    /* wait for tx complete event. this is needed for the last byte, otherwise the
     * transceiver's transmit output gets disabled with MbRtuDriverOutputControlHook()
     * before the byte reception completes.
     */
    while (LL_USART_IsActiveFlag_TC(USART_CHANNEL) == 0)
    {
      /* keep the watchdog happy */
      CopService();
      /* break loop upon timeout. this would indicate a hardware failure. */
      if (TimerGet() > timeout)
      {
        break;
      }
    }
  }
}

blt_int16u MbRtuFreeRunningCounterGet(void)
{
  blt_int16u result;

  /* This port's timer module is based on a 100 kHz free running counter, which is
   * already configured and running. Therefore we just need to read out its free running
   * counter value.
   */
  result = (blt_int16u)TIM1->CNT;

  /* give the result back to the caller. */
  return result;
}
